# bunkhouse-protobuf

./: .gitignore  CLAUDE.md  README.md  buf.gen.yaml  buf.yaml
.github/workflows/: ci.yml
proto/bunkhouse/events/: deployment.proto  envelope.proto  github.proto  repo.proto  step.proto  task.proto  validation.proto  workflow_def.proto  workflow_run.proto
python/: pyproject.toml
python/bunkhouse/events/: deployment_pb2.py  deployment_pb2_grpc.py  envelope_pb2.py  envelope_pb2_grpc.py  github_pb2.py  github_pb2_grpc.py  repo_pb2.py  repo_pb2_grpc.py  step_pb2.py  step_pb2_grpc.py  task_pb2.py  task_pb2_grpc.py  validation_pb2.py  validation_pb2_grpc.py  workflow_def_pb2.py  workflow_def_pb2_grpc.py  workflow_run_pb2.py  workflow_run_pb2_grpc.py
python/bunkhouse_protobuf/: __init__.py  helpers.py
python/tests/: test_create_event.py  test_fifo_helpers.py  test_helpers.py  test_package.py  test_roundtrip.py  test_sns_attributes.py  test_versioning.py
scripts/: compile.sh  publish.sh
