[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bunkhouse_protobuf"
dynamic = ["version"]
description = "Generated protobuf event schemas for Bunkhouse"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "protobuf>=5.26",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.62",
    "pytest>=8.0",
]

[tool.setuptools.dynamic]
version = {attr = "bunkhouse_protobuf._version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["bunkhouse_protobuf*", "bunkhouse*"]

[tool.setuptools.package-data]
bunkhouse_protobuf = ["py.typed"]
